# convolution

./: .travis.yml  CHANGELOG.md  README.md  configure-all.sh  convolution.cabal  travis.yml
bench/: Main.hs
conal/: Misc.hs  README.md  Semi.hs
research/: Accelerate.hs  Accelerate2.hs  Brent.hs  CArray.hs  ClosedSemiring.hs  Comonad.hs  ComonadicConvolutions.hs  ConCat.hs  FFT.hs  FloatingConv.hs  Fold.hs  Golf.hs  History.hs  HomFuncs.hs  Massiv.hs  Piponi.hs  PointedSet.hs  Powers.hs  RepaConv.hs  SemiRing.hs  Stream.hs
research/FFT/Chalmers/: FFT.hs
research/FFT/Cheplykaya/: FFT.hs  RootOfUnity.hs
research/FFT/Rosetta/: FFT.hs
research/FFT/algorithms-archivists/: FFT.hs
research/FFT/chalmers/: Given.hs
research/FFT/cheplykaya/: FFT.hs
research/FFT/src/: Main.hs
research/FFT/src/Aux/: DFT.hs  FFT.hs
src/: DList.hs  FFT.hs  Main.hs  Naive.hs  Overlap.hs
test/: NaiveSpec.hs
