cabal-version:      2.4
name:               convolution
version:            0.1.0.0
synopsis:           Experiments in convolution in haskell
author:             jrp2014
tested-with:        GHC == 8.6.5, GHC == 8.6.4, GHC == 8.4.4, GHC == 8.2.2,
                    GHC == 8.0.2, GHC == 7.10.3
category:           Math
homepage:           https://github.com/jrp2014/convolution
build-type:         Simple
extra-source-files: CHANGELOG.md
                    README.md

source-repository head
  type:     git
  location: https://github.com/jrp2014/convolution

flag llvm
  default:     False
  description: Use LLVM build for better performance

library
  exposed-modules:  Semi
  other-modules:    Misc
  hs-source-dirs:   src, conal
  build-depends:    base            >= 4.8.0.0 && < 5
                  , MemoTrie
                  , array
                  , containers
                  , criterion
                  , data-inttrie
                  , deepseq
                  , finite-typelits
                  , parallel
                  , vector
                  , vector-sized
  default-language: Haskell2010
  install-includes: GenInstances.inc

  if flag(llvm)
    ghc-options: -Wall -Wextra -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints -Wcompat
                 -Wmissed-specialisations -Wmissing-export-lists -Widentities
                 -Wredundant-constraints -Wmissing-home-modules -O2 -fllvm
                 -optlo-O3 -feager-blackholing
  else
    ghc-options: -Wall -Wextra -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints -Wcompat
                 -Wmissed-specialisations -Wmissing-export-lists -Widentities
                 -Wredundant-constraints -Wmissing-home-modules -O2
                 -feager-blackholing

executable profiled-convolution
  main-is:          Main.hs
  other-modules:    FFT
                    Misc
                    Naive
                    Semi
  hs-source-dirs:   src, bench, conal
  build-depends:    base            >= 4.8.0.0 && < 5
                  , MemoTrie
                  , array
                  , containers
                  , criterion
                  , data-inttrie
                  , deepseq
                  , finite-typelits
                  , parallel
                  , vector
                  , vector-sized
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -s -p -h -xt -i0.1"

  if flag(llvm)
    ghc-options: -Wall -Wextra -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints -Wcompat
                 -Wmissed-specialisations -Wmissing-export-lists -Widentities
                 -Wredundant-constraints -Wmissing-home-modules -O2 -fllvm
                 -optlo-O3 -feager-blackholing
  else
    ghc-options: -Wall -Wextra -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints -Wcompat
                 -Wmissed-specialisations -Wmissing-export-lists -Widentities
                 -Wredundant-constraints -Wmissing-home-modules -O2
                 -feager-blackholing

test-suite hspec-convolution
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Misc
                      Naive
                      NaiveSpec
                      Semi
  hs-source-dirs:     src, test, conal
  build-depends:      base                 >= 4.8.0.0 && < 5
                    , MemoTrie
                    , QuickCheck
                    , array
                    , containers
                    , criterion
                    , data-inttrie
                    , deepseq
                    , finite-typelits
                    , hspec
                    , hspec-core
                    , parallel
                    , quickcheck-instances
                    , vector
                    , vector-sized
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -rtsopts "-with-rtsopts=-N -s"

  if flag(llvm)
    ghc-options: -Wall -Wextra -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints -Wcompat
                 -Wmissed-specialisations -Wmissing-export-lists -Widentities
                 -Wredundant-constraints -Wmissing-home-modules -O2 -fllvm
                 -optlo-O3 -feager-blackholing
  else
    ghc-options: -Wall -Wextra -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints -Wcompat
                 -Wmissed-specialisations -Wmissing-export-lists -Widentities
                 -Wredundant-constraints -Wmissing-home-modules -O2
                 -feager-blackholing

benchmark bench-convolution
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    FFT
                    Misc
                    Naive
                    Semi
  hs-source-dirs:   src, bench, conal
  build-depends:    base            >= 4.8.0.0 && < 5
                  , MemoTrie
                  , array
                  , containers
                  , criterion
                  , data-inttrie
                  , deepseq
                  , finite-typelits
                  , parallel
                  , vector
                  , vector-sized
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -s"

  if flag(llvm)
    ghc-options: -Wall -Wextra -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints -Wcompat
                 -Wmissed-specialisations -Wmissing-export-lists -Widentities
                 -Wredundant-constraints -Wmissing-home-modules -O2 -fllvm
                 -optlo-O3 -feager-blackholing
  else
    ghc-options: -Wall -Wextra -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints -Wcompat
                 -Wmissed-specialisations -Wmissing-export-lists -Widentities
                 -Wredundant-constraints -Wmissing-home-modules -O2
                 -feager-blackholing
